Provide options to use native linux/bsd network (#9)
* Choose kqueue/epool based mechanism whenever it possible with fallback onto plain Java.NIO.
Fixes #7